# relative-rotation-graph

./: .gitignore  .rrg_sets.json  README.md  TradingView_WebSocket_Analysis.md  gui.py  index.html  package-lock.json  package.json  run_gui.sh  vite.config.ts
Output/: ES1_2026-04-17_16-56-19.csv
python_backend/: __main__.py  core.py  log_bus.py  requirements.txt  rrg.py  server.py  sets.py  settings.py
scripts/: build-backend.sh
src/: App.tsx  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: RrSidePanel.tsx  RrgChart.tsx  SetEditorModal.tsx  SettingsModal.tsx
src/lib/: api.ts  types.ts  useColumnWidths.ts
