[package]
name = "relative_rotation_graph"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["blocking", "rustls-tls"]

[features]
default = []
